add hateoas links to related resources
