# server/src/main/kotlin/io/jlite/example/vehicle/api/Message.kt
@@ -2,8 +2,15 @@ package io.jlite.example.vehicle.api
 
 import io.javalin.http.Context
 
-open class Message(val messageContent: String): HalResource<Message>() {
+open class Message(val messageContent: String, var licenseNumber: String? = null) : HalResource<Message>() {
     override fun withHal(ctx: Context): Message {
-        TODO("Not yet implemented")
+        links.addAll {
+            HalBuilder(ctx)
+                .toDriver("driver", licenseNumber!!)
+                .toMessages("self", licenseNumber!!)
+                .build()
+        }
+
+        return this
     }
 }
